# master-qr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  build_exe.ps1  installer.iss  publish_release.ps1  pyproject.toml  release.ps1
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/workflows/: ci.yml  release.yml
QR/: main.py  requirements-dev.txt  requirements.txt
QR/master_qr/: __init__.py  __main__.py  cli.py  config.py  gui.py  history.py  redirect_server.py  render.py
QR/tests/: conftest.py  test_cli_smoke.py  test_history.py  test_redirect_server.py  test_render.py
